force-app/main/default/objects/Partner_Attribute__c/Partner_Attribute__c.object-meta.xml
<CustomObject>
    <description>NPN : Additional attributes to an account - program type, competency, level etc.</description>
    <label>Partner Attribute</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>