force-app/main/default/objects/Partner_Attribute__c/fields/ATP_Partner__c.field-meta.xml
<CustomField>
    <fullName>ATP_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATP Partner</label>
    <type>Checkbox</type>
</CustomField>