force-app/main/default/objects/Partner_Attribute__c/fields/ATP_Partner_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>ATP_Partner_Termination_Date__c</fullName>
    <label>ATP Partner Termination Date</label>
    <type>Date</type>
</CustomField>