force-app/main/default/objects/Partner_Attribute__c/fields/Community_Status__c.field-meta.xml
<CustomField>
    <fullName>Community_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1027</description>
    <label>Community Status</label>
    <type>Checkbox</type>
</CustomField>