force-app/main/default/objects/Partner_Attribute__c/fields/Date_Competency_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Competency_Signed__c</fullName>
    <label>Date Competency Signed</label>
    <type>Date</type>
</CustomField>