force-app/main/default/objects/Partner_Attribute__c/fields/Date_Competency_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Competency_Terminated__c</fullName>
    <label>Date Competency Terminated</label>
    <type>Date</type>
</CustomField>