force-app/main/default/objects/Partner_Attribute__c/fields/Date_Program_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Program_Signed__c</fullName>
    <description>Shows Account_Name__r.NPN_Program_Signed_Date__c (NPN Agreement Date)</description>
    <formula>Account_Name__r.NPN_Program_Signed_Date__c</formula>
    <label>NPN Agreement Date</label>
    <type>Date</type>
</CustomField>