force-app/main/default/objects/Partner_Attribute__c/fields/Date_Program_Signed_Old__c.field-meta.xml
<CustomField>
    <fullName>Date_Program_Signed_Old__c</fullName>
    <label>Date Program Signed Old</label>
    <type>Date</type>
</CustomField>