force-app/main/default/objects/Partner_Attribute__c/fields/Date_Program_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Program_Terminated__c</fullName>
    <description>Account &gt; NPN Program Termination Date</description>
    <formula>Account_Name__r.NPN_Program_Termination_Date__c</formula>
    <label>Date Program Terminated</label>
    <type>Date</type>
</CustomField>