force-app/main/default/objects/Partner_Attribute__c/fields/Exempted_from_POS_Submission__c.field-meta.xml
<CustomField>
    <fullName>Exempted_from_POS_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the POS submission is not required for this partner attribute</inlineHelpText>
    <label>Exempted from POS Submission</label>
    <type>Checkbox</type>
</CustomField>