force-app/main/default/objects/Partner_Attribute__c/fields/Level_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_Change_Date__c</fullName>
    <description>Competency Signed Date if Level_Change_Date_Tracker is blank</description>
    <formula>IF( ISBLANK(Level_Change_Date_Tracker__c), Date_Competency_Signed__c, Level_Change_Date_Tracker__c )</formula>
    <inlineHelpText>Competency Signed Date if Level_Change_Date_Tracker is blank</inlineHelpText>
    <label>Level Change Date</label>
    <type>Date</type>
</CustomField>