force-app/main/default/objects/Partner_Attribute__c/fields/Level_Change_Date_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Level_Change_Date_Tracker__c</fullName>
    <description>Date the Level Changed. Read Only field, no access to any profile; supposed to be set by Process Builder</description>
    <inlineHelpText>Date the Level Changed. Read Only field, no access to any profile; supposed to be set by Process Builder</inlineHelpText>
    <label>Level Change Date : Tracker</label>
    <type>Date</type>
</CustomField>