force-app/main/default/objects/Partner_Attribute__c/fields/Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact (Elite Partners)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Attributes</relationshipLabel>
    <relationshipName>Partner_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>