force-app/main/default/objects/Partner_Attribute__c/fields/PA_Concat_String__c.field-meta.xml
<CustomField>
    <fullName>PA_Concat_String__c</fullName>
    <formula>Account_Name__c+TEXT(Partner_Program_Name__c)  +  IF(ISBLANK(TEXT(Partner_Sub_Program__c)), &apos;&apos;, TEXT(Partner_Sub_Program__c)) +TEXT(Partner_Competency__c) + TEXT(Program_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA Concat String</label>
    <type>Text</type>
</CustomField>