force-app/main/default/objects/Partner_Attribute__c/fields/Partner_Competency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Competency__c</fullName>
    <label>Partner Competency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Program_Name__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>