force-app/main/default/objects/Partner_Attribute__c/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <description>Created for SDS-2999.</description>
    <inlineHelpText>A field designated for the NPN Partner team to track, document, or flag an additional Partner attribute.</inlineHelpText>
    <label>Partner Notes</label>
    <type>TextArea</type>
</CustomField>