force-app/main/default/objects/Partner_Attribute__c/fields/Partner_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Name__c</fullName>
    <label>Partner Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Tegra Embedded</fullName>
            </value>
            <value>
                <fullName>Services Subcontractor</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Service Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Solution Advisor</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
            <value>
                <fullName>Industry Focus</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>