force-app/main/default/objects/Partner_Attribute__c/fields/Partner_Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Program__c</fullName>
    <label>Partner Sub Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Program_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Data Center Provider</fullName>
            </value>
            <value>
                <fullName>EDU Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>