force-app/main/default/objects/Partner_Attribute__c/fields/Primary_Program_For_POS__c.field-meta.xml
<CustomField>
    <fullName>Primary_Program_For_POS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Partner POS related</description>
    <label>Primary Program For POS</label>
    <type>Checkbox</type>
</CustomField>