force-app/main/default/objects/Partner_Attribute__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <description>Program Level</description>
    <inlineHelpText>Select the program level - Preferred or Elite</inlineHelpText>
    <label>Program Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>