force-app/main/default/objects/Partner_Attribute__c/validationRules/Program_Signed_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Signed_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Account_Name__r.NPN_Program_Signed_Date__c)</errorConditionFormula>
    <errorMessage>NPN Program Signed Date must be entered on the account registry before adding a partner attribute</errorMessage>
</ValidationRule>